app/assets/stylesheets/layouts.css.scss
@import "common";
@import "bourbon";

$light_cobalt_blue: #1588c3;
$dark_grey: #666666;

ul {
  list-style-type: none;
}

.clear{
  clear: both;
}

h2 {
  font-size: 36px;
}

#content {
  margin-top: 110px;
  width: 100%;
}

body {
  background: black;
  -webkit-backface-visibility: hidden;
}

.dots {
  line-height: 30px;  
  margin: 20px auto;
  width: 28px;
  height: 8px;
  background: image-url("ellipsis.png") no-repeat;
}

h1#logo {
  margin-top: 0;
}

h1#logo.no-animation {
  opacity: 1;
}

#header-content h1#logo {
  position: absolute; 
  height: 110px;
  /*left: 50%;
  margin-left: -101px;*/
}

h1#logo a {
  width: 75px;
  height: 75px;
  background: image-url("logo.png") no-repeat;
  float: left;
  margin-top: 25px;
}

#logo-grey a {
  background: image-url("logo_grey.png") no-repeat;
  width: 75px;
  height: 75px;
  float: left;  
}

#twitter-logo {
  margin: 0 0px;
}

#facebook-logo {
  margin: 0 0px;
}

#twitter-logo a {
  background: image-url("footer-twitter.png") no-repeat;
  width: 75px;
  height: 50px;
  float: left;
}

#facebook-logo a {
  background: image-url("footer-facebook.png") no-repeat;
  width: 75px;
  height: 50px;
  float: left;  
}





h1#logo-light:hover a {
  background-position: 0px -55px;
}

section {
  padding: 50px 0 80px;
}

section p {
  color: #838383;
  font-size: 14px;
}

section p a {
  color: #fcb040;
}

#about, #projects {
  background: #f6f6f6;
}

#together {
  background: #f6f6f6;
  height: 150px;

}

#heroes {

  padding-top: 50px; 

  h3 {
    color: #535353;
    float: right;
    margin-right: 10px;
  }
}

#heart-icon {
  background: image-url("heart.png") no-repeat;
  display: block;
  height: 80px;
  width: 30px;
  margin-top: 20px;
  margin-left: auto;
  margin-right: auto
}

#work-together {
  float: left;
 }

#blog-section {
 background: #545454
}

.content {
  color: white;
}

div.dialog {
  width: 45em;
  padding: 0 4em;
  margin: 4em auto 0 auto;
  color: white;
  text-align: center;
  font-family: arial, sans-serif;

  h1.errorTitle {
    font-size: 32px;
    color:$light_cobalt_blue;

    code.errorCode {
      font-size:34px;
    }
    
  }
  
  h2.errorDescription {
    font-size:18px;
  }
}

#nav {
  margin-top: 12px;
}

#header-content nav {
  margin-top: 12px;
  height: 110px;
}

#header {
  height: 110px;
  width: 100%;
  background: #FFFFFF;
  border-bottom: 1px solid #e9e9e9;
  padding-bottom: 12px;
  z-index: 10;
  position: fixed;
  margin-top: -110px;
}

#header-content {
  position: relative;
}

nav ul {
  float: right;
  margin-top: 37px;
}

nav ul li {
  list-style-type: none;
  float: left;
  margin-left: 40px;
}

nav ul li a {
  color: #525252;
  text-transform: uppercase;
  font-family: "Merriweather Sans", Georgia;
  font-size: 14px;
}

nav ul a.active {
  color: #fcb040; 
}

nav ul li a.selected, nav ul li a:hover {
  webkit-transition: all 275ms;
     -moz-transition: all 275ms;
     -o-transition: all 275ms;
     transition: all 275ms;
  color: #fcb040; 
}

#content-wrapper {
  overflow: hidden;
}

@media screen and (max-width: 767px) {

  ul#nav li {
    &.selected {
      a:after {
        text-align: center !important;
        margin-top: 20px;
        width: 17%;
        height: 25px;
        content: ' ';
        display: block;
        background: url(triangle.png) no-repeat center 1px;
        position: absolute;
      }
    }
  }

  .contact-details .three {
    padding-bottom: 20px;
    padding-top: 10px;
    border-bottom: 1px dashed white;
  }

  .contact-details .three:last-child {
    border-bottom: 0px dashed white;
  }
}

.fourfoot {
  width:auto !important;
  padding: 0 10px;
}

.arrow {
  background: url("blue-arrow.png") no-repeat scroll 0 8px transparent;
  float: right;
  height: 7px;
  width: 22px;
  position: absolute;
  right: 10px;
  top: 9px;
}

.reveal-modal {
  color: $dark_grey;
}

.post {
  p {
    font-family: "Droid Serif", serif;
    font-size: 13px;
    line-height: 23px;
    display: inline-block;
  }

  .post_pic {
    margin-top: 30px;
    margin-left: auto;
    margin-right: auto;
  }

  h2 a {
    font-family: 'PT Sans', sans-serif;
    font-size: 18px;
    color: $dark-blue;
    text-transform: uppercase;
    line-height: 125%;
    display: inline-block;
  }
}

.post-info {
  padding-top: 15px;
  display: block;
}

.post-info, .post-info a {
  font: bold 12px 'PT Sans', sans-serif;
  text-transform: uppercase;
  text-align: center;
  color: $dark-blue;
}

#latest-blogs .post:last-child {
  border-left: 1px solid $dark-blue;
}

#latest-blogs {
  padding-bottom: 20px;
  border-bottom: 2px solid $dark-blue;
}

.post .links, .post .links a {
  font: bold 12px 'PT Sans', sans-serif;
  text-transform: uppercase;
  color: $dark-blue;
}

.post .links a:hover {
  color: $dark-gray;
}

.post .links {
  margin-top: 10px;
}

footer .small-line {
  margin: 20px auto;
  coontent: ' ';
  width: 30px;
  height: 1px;
  background: $dark-blue;
}

#footer-logo {
  width: 120px;
}

#location {
  width: 200px;
  float: left;

  h3 {
    font-size: 12px;
    font-family: "Merriweather Sans", sans-serif;
    text-transform: uppercase;
    color: #707070;
    margin-top: 5px;
    margin-bottom: 5px;
    line-height: 1.1;
  }

  h4 {
    font-size: 11px;
    font-family: "Merriweather Sans", sans-serif;
    font-weight: normal;
    text-transform: none;
    color: #B8B8B8;
    margin-top: 5px;
    margin-bottom: 5px;
    line-height: 1.1;
  }

  h5 {
    font-size: 11px;  
    font-family: "Merriweather Sans", sans-serif;
    font-weight: bold;
    text-transform: none;
    color: #B8B8B8;
    margin-top: 5px;
    margin-bottom: 5px;
    line-height: 1.1;
  }
}


#footer-tweet h2 {
    font-family: 'PT Sans', sans-serif;
    font-size: 18px;
    color: $dark-blue;
    text-transform: uppercase;
    line-height: 125%;
    display: inline-block;
    margin-left: 50px;
}

.footer-gotop-ribbon {
  content: ' ';
  width: 50px;
  height: 76px;
  position: absolute;
  top: 0px;
  right: 0px;
  background: image-url("footer_tag.png");
  &:hover {
    background-position: -50px 0;
  }
}

@media screen and (max-width: 580px) {
  ul#nav li {
    &.selected {
      a:after {
        display: none !important;
      }
    }
  }
}

.highlight {
  background: black !important;
  padding: 15px;
}

code {
  padding: 5px;
}

.capsLock {
  text-transform:uppercase;
}


/* button classes */
.btn {
  border: none;
  border-radius: 3px;
  width: 202px;
  height: 51px;
  -webkit-transition-property: all;
  -moz-transition-property: all;
  -o-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 275ms;
  -moz-transition-duration: 275ms;
  -o-transition-duration: 275ms;
  transition-duration: 275ms;;
  color: #fff;
  font-size: 18px;
  font-weight: bold;
  text-transform: uppercase;
  padding: 0 20px;
  display: block;
  line-height: 51px;
  text-align: center;
  margin-bottom: 15px !important;
  letter-spacing: -1px;
}

.btn:hover {
  color: #FFFFFF; 
}

.btn.center {
  margin: 0px auto auto;
}
.btn.top-margin {
  margin-top: 50px;
}

.btn.top-margin-small {
  margin-top: 5px;
}

.btn.orange {  
  background-color: #fbaf3f;
}

.btn.orange:hover {
  color: #fff;
  background-color: #545454;
}

.btn.dark-blue {
  background-color: #3b5997;
}

.btn.dark-blue:hover {
  color: #fff;
  background-color: #545454;
}

.btn.blue {
  background-color: #38A8CC;
  width: 300px;
  height: 60px;
}

.btn.blue:hover {
  color: #fff;
  background-color: #545454;
}

.arrow-down {
  height: 32px;
  width: 32px;
  background: url(../img/arrow-down.png) no-repeat;
  display: block;
  margin: 0 auto;
  margin-top: 90px;
}

/* Blog */
#blog-section h3 {
  color: #FFF;
  margin: 0;
  font-size: 24px;  
}

#blog-section section {
  padding: 75px 0;
}

a.blog-link {
  font-size: 16px;
  line-height: 30px;  
  color: #d4d3d3;
  margin-bottom: 35px;
  display: inline-block;
}

a.blog-link:hover {
  webkit-transition: all 275ms;
  -moz-transition: all 275ms;
  -o-transition: all 275ms;
  transition: all 275ms;
  color: #fcb040; 
}

.date {
  color: #818181;
  font-size: 13px;
  font-style: italic;
}

footer {
  background: #2f2f2f;
  padding: 50px 0px 90px;
  color: #818181;
}

footer h4 {
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  color: white;
  margin-bottom: 25px;
}

